Fix swiper overflow and adjust button placement in companies section
- Updated the .companies-swiper class to set overflow to hidden and added margin for better layout.
- Moved the swiper navigation buttons to ensure they are correctly positioned within the swiper container.

--- a/wp-content/themes/colina/assets/sass/styles.scss
+++ b/wp-content/themes/colina/assets/sass/styles.scss
@@ -249,7 +249,9 @@ a {
       overflow: hidden;
 
       .companies-swiper {
-        overflow: visible;
+        overflow: hidden !important;
+        margin: 0 60px; 
+
 
         .swiper-slide {
           height: auto;
